Add option to turn on/off debug iterators

--- a/projects/dxilconv/CMakeLists.txt
+++ b/projects/dxilconv/CMakeLists.txt
@@ -9,6 +9,7 @@ include_directories(
 
 macro(add_dxilconv_project_library name)
   add_llvm_library(${name} ${ARGN})
+#  add_definitions(/D_ITERATOR_DEBUG_LEVEL=0)
   set_output_directory(${name} ${LLVM_RUNTIME_OUTPUT_INTDIR} ${LLVM_LIBRARY_OUTPUT_INTDIR})  
   set_target_properties(${name} PROPERTIES FOLDER "Dxilconv libraries")
 endmacro(add_dxilconv_project_library)
