Added new PDB interface

--- a/tools/clang/tools/dxcompiler/CMakeLists.txt
+++ b/tools/clang/tools/dxcompiler/CMakeLists.txt
@@ -54,6 +54,7 @@ set(SOURCES
   dxillib.cpp
   dxcutil.cpp
   dxcdisassembler.cpp
+  dxcpdbutils.cpp
   dxclinker.cpp
 )
 else ()
@@ -66,6 +67,7 @@ set(SOURCES
   dxcfilesystem.cpp
   dxcutil.cpp
   dxcdisassembler.cpp
+  dxcpdbutils.cpp
   dxillib.cpp
   dxcvalidator.cpp
 )
@@ -111,6 +113,10 @@ set(GENERATED_HEADERS
   ClangStmtNodes
   )
 
+if (WIN32)
+  find_package(DiaSDK REQUIRED) # Used for constants and declarations.
+endif (WIN32)
+
 add_clang_library(dxcompiler SHARED ${SOURCES})
 add_dependencies(dxcompiler TablegenHLSLOptions) 
 if (WIN32)
@@ -121,7 +127,7 @@ target_link_libraries(dxcompiler PRIVATE ${LIBRARIES})
 if (ENABLE_SPIRV_CODEGEN)
   target_link_libraries(dxcompiler PRIVATE clangSPIRV)
 endif (ENABLE_SPIRV_CODEGEN)
-include_directories(AFTER ${LLVM_INCLUDE_DIR}/dxc/Tracing)
+include_directories(AFTER ${LLVM_INCLUDE_DIR}/dxc/Tracing ${DIASDK_INCLUDE_DIRS})
 
 set_target_properties(dxcompiler
   PROPERTIES
