Hacky incorporation of spirv_to_dxil
This is unconditional and requirese some ugly direct intervention to put
the spirv_to_dxil library in place, but it allows for some testing.

--- a/tools/clang/tools/dxcompiler/CMakeLists.txt
+++ b/tools/clang/tools/dxcompiler/CMakeLists.txt
@@ -128,7 +128,7 @@ if (WIN32)
 endif()
 target_link_libraries(dxcompiler PRIVATE ${LIBRARIES})
 if (ENABLE_SPIRV_CODEGEN)
-  target_link_libraries(dxcompiler PRIVATE clangSPIRV)
+  target_link_libraries(dxcompiler PRIVATE clangSPIRV spirv_to_dxil)
 endif (ENABLE_SPIRV_CODEGEN)
 include_directories(AFTER ${LLVM_INCLUDE_DIR}/dxc/Tracing ${DIASDK_INCLUDE_DIRS})
 
