Support signing DxilContainer with dxv.exe

--- a/tools/clang/tools/dxv/CMakeLists.txt
+++ b/tools/clang/tools/dxv/CMakeLists.txt
@@ -7,6 +7,7 @@ set( LLVM_LINK_COMPONENTS
   dxcsupport
   Option     # option library
   MSSupport  # for CreateMSFileSystemForDisk
+  dxilcontainer
   )
 
 add_clang_executable(dxv
