--- a/.travis.yml
+++ b/.travis.yml
@@ -41,11 +41,10 @@ matrix:
   # Allow address sanitizer bot to fail for now. TODO(Remove this).
   allow_failures:
     - os: linux
-      # All linux timing out with empty log currently.
-      # compiler: clang
-      # env:
-      #   - DXC_BUILD_TYPE=Debug
-      #   - BUILD_CONFIG=ASAN
+      compiler: clang
+      env:
+        - DXC_BUILD_TYPE=Debug
+        - BUILD_CONFIG=ASAN
 
 cache:
   apt: true
