Find CMake config for azdo

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,8 +25,8 @@ stages:
       displayName: 'Installing dependencies'
     - bash: git submodule update --init
       displayName: 'Updating submodules'
-    - bash: mkdir build && cd build
-    - bash: cmake .. -GNinja $(cat ../utils/cmake-predefined-config-params) -DSPIRV_BUILD_TESTS=ON -DCMAKE_BUILD_TYPE=$(configuration)
+    - bash: mkdir build
+    - bash: cmake ../../ --build build -GNinja $(cat ../utils/cmake-predefined-config-params) -DSPIRV_BUILD_TESTS=ON -DCMAKE_BUILD_TYPE=$(configuration)
       displayName: 'Cmake configuration'
     - bash: ninja
       displayName: 'Building'
