--- a/tools/clang/tools/dxrfallbackcompiler/CMakeLists.txt
+++ b/tools/clang/tools/dxrfallbackcompiler/CMakeLists.txt
@@ -14,10 +14,10 @@ set(LLVM_LINK_COMPONENTS
 #  debuginfodwarf # no support for DWARF files (IR debug info is OK)
 #  debuginfopdb # no support for PDB files
   dxcsupport
+  dxcbindingtable
   dxrfallback
   dxil
   dxilcontainer
-  dxilresourcebinding
   dxilrootsignature
   hlsl
   instcombine
