--- a/tools/clang/tools/dxcompiler/CMakeLists.txt
+++ b/tools/clang/tools/dxcompiler/CMakeLists.txt
@@ -17,6 +17,7 @@ set(LLVM_LINK_COMPONENTS
   dxilcontainer
   dxilpixpasses # for DxcOptimizerPass
   dxilrootsignature
+  dxcbindingtable
   hlsl
   instcombine
   ipa
