--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -90,6 +90,10 @@ stages:
       vmImage: $(image)
 
     steps:
+    - task: UsePythonVersion@0
+      inputs:
+        versionSpec: '3.x'
+
     - bash: sudo apt-get install ninja-build
       displayName: 'Installing dependencies'
       condition: eq(variables['image'], variables['linux'])
