Enable building llvm-dis
llvm-dis is a lightweight tool for reading IR modules as bitcode and
dumping them as textual IR. It is useful for debugging and verification
of bitcode-related issues.

This patch just re-enables the llvm-dis build and updates the code to
build cleanly on *nix systems.

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -18,7 +18,7 @@ add_llvm_tool_subdirectory(opt) # HLSL Change
 endif()
 
 # add_llvm_tool_subdirectory(llvm-as) # HLSL Change
-# add_llvm_tool_subdirectory(llvm-dis) # HLSL Change
+add_llvm_tool_subdirectory(llvm-dis) # HLSL Change
 # add_llvm_tool_subdirectory(llvm-mc) # HLSL Change
 
 # HLSL Change Begins
