--- a/tools/clang/unittests/HLSLTestLib/CMakeLists.txt
+++ b/tools/clang/unittests/HLSLTestLib/CMakeLists.txt
@@ -18,8 +18,9 @@ add_clang_library(HLSLTestLib
   DxcTestUtils.cpp
   FileCheckForTest.cpp
 )
-include_directories(${DXC_GTEST_DIR}/googletest/include)
-include_directories(${DXC_GTEST_DIR}/googlemock/include)
+include_directories(${LLVM_MAIN_SRC_DIR}/utils/unittest/googletest/include)
+include_directories(${LLVM_MAIN_SRC_DIR}/utils/unittest/googlemock/include)
+
 endif(WIN32)
 
 add_dependencies(HLSLTestLib TablegenHLSLOptions)
