Enable building LLVM testing tools
This gets a bunch of the LLVM testing tools building, which allows us
to run the LIT tests (which have a lot of failures)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -643,12 +643,12 @@ if (HLSL_EMBED_VERSION)
 endif()
 
 if( LLVM_INCLUDE_UTILS )
-  # add_subdirectory(utils/FileCheck) # HLSL Change
+  add_subdirectory(utils/FileCheck)
   # add_subdirectory(utils/FileUpdate) # HLSL Change
-  # add_subdirectory(utils/count) # HLSL Change
-  # add_subdirectory(utils/not) # HLSL Change
-  # add_subdirectory(utils/llvm-lit) # HLSL Change
-  # add_subdirectory(utils/yaml-bench) # HLSL Change
+  add_subdirectory(utils/count)
+  add_subdirectory(utils/not)
+  add_subdirectory(utils/llvm-lit)
+  add_subdirectory(utils/yaml-bench)
 else()
   if ( LLVM_INCLUDE_TESTS )
     message(FATAL_ERROR "Including tests when not building utils will not work.
