--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -221,46 +221,48 @@ else:
 # also have a post-assertion to not match a trailing hyphen (foo-).
 NOJUNK = r"(?<!\.|-|\^|/)"
 
-for pattern in [r"\bbugpoint\b(?!-)",
-                NOJUNK + r"\bllc\b",
-                r"\blli\b",
-                r"\bllvm-ar\b",
-                r"\bllvm-as\b",
+# HLSL Change begin - disabling tools we don't build
+for pattern in [#r"\bbugpoint\b(?!-)",
+                #NOJUNK + r"\bllc\b",
+                #r"\blli\b",
+                #r"\bllvm-ar\b",
+                #r"\bllvm-as\b",
                 r"\bllvm-bcanalyzer\b",
                 r"\bllvm-config\b",
-                r"\bllvm-cov\b",
-                r"\bllvm-cxxdump\b",
+                #r"\bllvm-cov\b",
+                #r"\bllvm-cxxdump\b",
                 r"\bllvm-diff\b",
                 r"\bllvm-dis\b",
-                r"\bllvm-dsymutil\b",
-                r"\bllvm-dwarfdump\b",
+                #r"\bllvm-dsymutil\b",
+                #r"\bllvm-dwarfdump\b",
                 r"\bllvm-extract\b",
-                r"\bllvm-go\b",
-                r"\bllvm-lib\b",
+                #r"\bllvm-go\b",
+                #r"\bllvm-lib\b",
                 r"\bllvm-link\b",
-                r"\bllvm-lto\b",
-                r"\bllvm-mc\b",
-                r"\bllvm-mcmarkup\b",
-                r"\bllvm-nm\b",
-                r"\bllvm-objdump\b",
-                r"\bllvm-profdata\b",
-                r"\bllvm-ranlib\b",
-                r"\bllvm-readobj\b",
-                r"\bllvm-rtdyld\b",
-                r"\bllvm-size\b",
+                #r"\bllvm-lto\b",
+                #r"\bllvm-mc\b",
+                #r"\bllvm-mcmarkup\b",
+                #r"\bllvm-nm\b",
+                #r"\bllvm-objdump\b",
+                #r"\bllvm-profdata\b",
+                #r"\bllvm-ranlib\b",
+                #r"\bllvm-readobj\b",
+                #r"\bllvm-rtdyld\b",
+                #r"\bllvm-size\b",
                 r"\bllvm-tblgen\b",
-                r"\bllvm-c-test\b",
-                r"\bmacho-dump\b",
+                #r"\bllvm-c-test\b",
+                #r"\bmacho-dump\b",
                 NOJUNK + r"\bopt\b",
                 r"\bFileCheck\b",
-                r"\bobj2yaml\b",
-                r"\byaml2obj\b",
+                #r"\bobj2yaml\b",
+                #r"\byaml2obj\b",
                 r"\byaml-bench\b",
-                r"\bverify-uselistorder\b",
+                #r"\bverify-uselistorder\b",
                 # Handle these specially as they are strings searched
                 # for during testing.
                 r"\| \bcount\b",
                 r"\| \bnot\b"]:
+# HLSL Change end - disabling tools we don't build
     # Extract the tool name from the pattern.  This relies on the tool
     # name being surrounded by \b word match operators.  If the
     # pattern starts with "| ", include it in the string to be
