Fixing broken Linux and Windows builds

--- a/lib/Support/CMakeLists.txt
+++ b/lib/Support/CMakeLists.txt
@@ -140,3 +140,5 @@ set_property(TARGET LLVMSupport PROPERTY LLVM_SYSTEM_LIBS "${system_libs}")
 if(WIN32)
 set_property(TARGET LLVMSupport PROPERTY COMPILE_FLAGS /EHsc )
 endif(WIN32)
+
+target_link_libraries(LLVMSupport PUBLIC LLVMMSSupport)
