--- a/lib/IR/CMakeLists.txt
+++ b/lib/IR/CMakeLists.txt
@@ -53,3 +53,5 @@ add_llvm_library(LLVMCore
   )
 
 add_dependencies(LLVMCore intrinsics_gen)
+
+target_link_libraries(LLVMCore PUBLIC LLVMDXIL) # HLSL Change
