--- a/lib/Transforms/IPO/CMakeLists.txt
+++ b/lib/Transforms/IPO/CMakeLists.txt
@@ -29,3 +29,5 @@ add_llvm_library(LLVMipo
   )
 
 add_dependencies(LLVMipo intrinsics_gen)
+
+target_link_libraries(LLVMipo PUBLIC LLVMDXIL) # HLSL Change
