Get LLVM Unit Tests Passing
This change in conjunction with the work in #4020, will get all of the
LLVM unit tests passing. In addition to minor fixes in several of the
tests, and to the build configuration, this patch adds a new implicit
disk filesystem if the filesystem APIs are used without initializing a
PerThreadFileSystem.

The implicit filesystem is only enabled if `LLVM_INCLUDE_TEST=On`, and
it should allow the LLVM filesystem APIs to behave as LLVM tools and
tests expect them to.

--- a/lib/Support/CMakeLists.txt
+++ b/lib/Support/CMakeLists.txt
@@ -30,6 +30,13 @@ endif( NOT MSVC )
 # HLSL Change - add ignored sources
 set(HLSL_IGNORE_SOURCES DynamicLibrary.cpp PluginLoader.cpp)
 
+# HLSL Change Begin - Add implicit filesystem when tests are enabled
+if (LLVM_INCLUDE_TESTS)
+  set_source_files_properties(Path.cpp
+    PROPERTIES COMPILE_DEFINITIONS "MS_IMPLICIT_DISK_FILESYSTEM")
+endif()
+# HLSL Change End
+
 add_llvm_library(LLVMSupport
   APFloat.cpp
   APInt.cpp
@@ -141,4 +148,4 @@ if(WIN32)
 set_property(TARGET LLVMSupport PROPERTY COMPILE_FLAGS /EHsc )
 endif(WIN32)
 
-target_link_libraries(LLVMSupport PUBLIC LLVMMSSupport)
+target_link_libraries(LLVMSupport PUBLIC LLVMMSSupport) # HLSL Change
