--- a/unittests/Support/CMakeLists.txt
+++ b/unittests/Support/CMakeLists.txt
@@ -3,6 +3,21 @@ set(LLVM_LINK_COMPONENTS
   Support
   )
 
+# HLSL Change Begin
+# Disable filesystem tests because the HLSL compiler file system abstractions
+# don't work the same way LLVM's do.
+
+set(HLSL_IGNORE_SOURCES
+    FileOutputBufferTest.cpp
+    LockFileManagerTest.cpp
+    MemoryTest.cpp
+    Path.cpp 
+    raw_pwrite_stream_test.cpp
+    # HLSL compiler doesn't support building targets...
+    TargetRegistry.cpp
+    )
+# HLSL Change End
+
 add_llvm_unittest(SupportTests
   AlignOfTest.cpp
   AllocatorTest.cpp
@@ -18,17 +33,17 @@ add_llvm_unittest(SupportTests
   EndianStreamTest.cpp
   EndianTest.cpp
   ErrorOrTest.cpp
-  FileOutputBufferTest.cpp
+  #FileOutputBufferTest.cpp # HLSL Change
   IteratorTest.cpp
   LEB128Test.cpp
   LineIteratorTest.cpp
-  LockFileManagerTest.cpp
+  #LockFileManagerTest.cpp # HLSL Change
   MD5Test.cpp
   ManagedStatic.cpp
   MathExtrasTest.cpp
   MemoryBufferTest.cpp
-  MemoryTest.cpp
-  Path.cpp
+  #MemoryTest.cpp # HLSL Change
+  #Path.cpp # HLSL Change
   ProcessTest.cpp
   ProgramTest.cpp
   RegexTest.cpp
@@ -38,7 +53,7 @@ add_llvm_unittest(SupportTests
   StreamingMemoryObject.cpp
   StringPool.cpp
   SwapByteOrderTest.cpp
-  TargetRegistry.cpp
+  #TargetRegistry.cpp # HLSL Change
   ThreadLocalTest.cpp
   TimeValueTest.cpp
   UnicodeTest.cpp
@@ -46,7 +61,7 @@ add_llvm_unittest(SupportTests
   YAMLParserTest.cpp
   formatted_raw_ostream_test.cpp
   raw_ostream_test.cpp
-  raw_pwrite_stream_test.cpp
+  #raw_pwrite_stream_test.cpp # HLSL Change
   )
 
 # ManagedStatic.cpp uses <pthread>.
