--- a/lib/DXIL/CMakeLists.txt
+++ b/lib/DXIL/CMakeLists.txt
@@ -1,5 +1,11 @@
 # Copyright (C) Microsoft Corporation. All rights reserved.
-# This file is distributed under the University of Illinois Open Source License. See LICENSE.TXT for details.
+# This file is distributed under the University of Illinois Open Source License.
+# See LICENSE.TXT for details.
+
+add_hlsl_hctgen(DxilOperations OUTPUT DxilOperations.cpp CODE_TAG)
+add_hlsl_hctgen(DxilShaderModel OUTPUT DxilShaderModel.cpp CODE_TAG)
+add_hlsl_hctgen(DxilMetadata OUTPUT DxilMetadataHelper.cpp CODE_TAG)
+
 add_llvm_library(LLVMDXIL
   DxilCBuffer.cpp
   DxilCompType.cpp
