Add back HlslIntrinsicOp.h
This header is also packaged up as part of the interface for handling
DXIL, so it needs to live in-tree.

--- a/include/dxc/CMakeLists.txt
+++ b/include/dxc/CMakeLists.txt
@@ -1,6 +1,6 @@
 include(HCT)
 
-add_hlsl_hctgen(HLSLIntrinsicOp BUILD_DIR OUTPUT HlslIntrinsicOp.h)
+add_hlsl_hctgen(HLSLIntrinsicOp OUTPUT HlslIntrinsicOp.h)
 
 add_subdirectory(DXIL)
 add_subdirectory(HLSL)
