Remove LTO and ArgumentPromotion passes
LTO was unused, and ArgumentPromotion would not have any effect on DXIL
until you use noinline, and it might decompose HLSL/DXIL objects, which
could break things.

--- a/lib/Transforms/IPO/CMakeLists.txt
+++ b/lib/Transforms/IPO/CMakeLists.txt
@@ -1,5 +1,5 @@
+set(HLSL_IGNORE_SOURCES ArgumentPromotion.cpp)
 add_llvm_library(LLVMipo
-  ArgumentPromotion.cpp
   BarrierNoopPass.cpp
   ConstantMerge.cpp
   DeadArgumentElimination.cpp
