--- a/tools/clang/tools/CMakeLists.txt
+++ b/tools/clang/tools/CMakeLists.txt
@@ -26,6 +26,7 @@ add_llvm_external_project(clang-tools-extra extra)
 add_subdirectory(dxcompiler)
 add_subdirectory(dxclib)
 add_subdirectory(dxc)
+add_subdirectory(dxil2spv)
 
 # These targets can currently only be built on Windows.
 if (WIN32)
