--- a/include/llvm/Config/config.h.in
+++ b/include/llvm/Config/config.h.in
@@ -174,6 +174,9 @@
 /* Define if mallinfo() is available on this platform. */
 #undef HAVE_MALLINFO
 
+/* Define if mallinfo() is available on this platform. */
+#undef HAVE_MALLINFO2
+
 /* Define to 1 if you have the <malloc.h> header file. */
 #undef HAVE_MALLOC_H
 
