[dxil2spv] Construct minimal SPIR-V module
Modify SpirvBuilder to allow unset astContext, because astContext is
unavilable when translating from DXIL. Initialize a SpirvContext and
SpirvBuilder to generate a basic module, and output as disassembled
SPIR-V to STDOUT.

--- a/tools/clang/tools/dxil2spv/CMakeLists.txt
+++ b/tools/clang/tools/dxil2spv/CMakeLists.txt
@@ -16,6 +16,8 @@ add_clang_executable(dxil2spv
 target_link_libraries(dxil2spv
   dxcompiler
   dxclib
+  clangSPIRV
+  SPIRV-Tools
   )
 
 llvm_map_components_to_libnames(llvm_libs support core irreader dxil)
