[dxil2spv] Add initial testing
Add whole file testing for dxil2spv, starting with a simple passthrough
pixel shader. dxil2spv does not yet generate complete output for this
sample, but adding testing now will help reviewing iterations.

--- a/tools/clang/tools/dxil2spv/CMakeLists.txt
+++ b/tools/clang/tools/dxil2spv/CMakeLists.txt
@@ -9,6 +9,8 @@ set( LLVM_LINK_COMPONENTS
   dxilcontainer
   )
 
+add_subdirectory(lib)
+
 add_clang_executable(dxil2spv
   dxil2spvmain.cpp
   )
@@ -18,6 +20,7 @@ target_link_libraries(dxil2spv
   dxclib
   clangSPIRV
   SPIRV-Tools
+  dxil2spvlib
   )
 
 llvm_map_components_to_libnames(llvm_libs support core irreader dxil)
