--- a/tools/clang/lib/SPIRV/CMakeLists.txt
+++ b/tools/clang/lib/SPIRV/CMakeLists.txt
@@ -20,6 +20,7 @@ add_clang_library(clangSPIRV
   SortDebugInfoVisitor.cpp
   NonUniformVisitor.cpp
   PreciseVisitor.cpp
+  Predefines.cpp
   RawBufferMethods.cpp
   RelaxedPrecisionVisitor.cpp
   RemoveBufferBlockVisitor.cpp
