--- a/tools/clang/unittests/HLSLTestLib/CMakeLists.txt
+++ b/tools/clang/unittests/HLSLTestLib/CMakeLists.txt
@@ -8,10 +8,12 @@ add_clang_library(HLSLTestLib
   DxcTestUtils.cpp
   FileCheckerTest.cpp
   FileCheckForTest.cpp
+  RDATDumper.cpp
 )
 else(WIN32)
 set(HLSL_IGNORE_SOURCES
   D3DReflectionDumper.cpp
+  RDATDumper.cpp
 )
 add_clang_library(HLSLTestLib
   DxcTestUtils.cpp
