[dxil2spv] Read file directly into llvm::MemoryBuffer
Read DXIL file directly into llvm::MemoryBuffer rather than through an
IDxcBlobEncoding. This also allows support for supplying file by STDIN
(not yet with dedicated CLI).

Also clean up some CMake LLVM dependencies.

--- a/tools/clang/tools/dxil2spv/lib/CMakeLists.txt
+++ b/tools/clang/tools/dxil2spv/lib/CMakeLists.txt
@@ -1,25 +1,26 @@
 # This file is distributed under the University of Illinois Open Source License. See LICENSE.TXT for details.
 
-set( LLVM_LINK_COMPONENTS
+set(LLVM_LINK_COMPONENTS
   ${LLVM_TARGETS_TO_BUILD}
+  core
   dxcsupport
-  Support
   dxil
   dxilcontainer
+  irreader
+  support
   )
-
 
 add_clang_library(dxil2spvlib
   dxil2spv.cpp
   )
 
 target_link_libraries(dxil2spvlib
-  dxcompiler
-  dxclib
+  clangBasic
+  clangCodeGen
   clangSPIRV
+  dxclib
+  dxcompiler
+  LLVMHLSL
+  LLVMipo
   SPIRV-Tools
   )
-
-llvm_map_components_to_libnames(llvm_libs support core irreader dxil)
-
-target_link_libraries(dxil2spvlib ${llvm_libs})
