Remove test output files; update .gitignore
- added *.dxo.converted to the list of extensions ignored by git
- renamed 3 test outputs from .fxc to .dxbc (which will make them to be ignored by git)

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@
 # Test outputs
 *.dxbc
 *.ll.converted
+*.dxo.converted
 
 #==============================================================================#
 # Explicit files to ignore (only matches one).
