Refactoring: separate StageVar and signature packing function from DeclMapper

--- a/tools/clang/lib/SPIRV/CMakeLists.txt
+++ b/tools/clang/lib/SPIRV/CMakeLists.txt
@@ -31,6 +31,7 @@ add_clang_library(clangSPIRV
   SpirvInstruction.cpp
   SpirvModule.cpp
   SpirvType.cpp
+  SignaturePackingUtil.cpp
   String.cpp
   SpirvUtils.cpp
 
