[dxil2spv] Fix build warning
Address the "Policy CMP0023 is not set: Plain and keyword target_link_libraries signatures cannot be mixed." warning.

--- a/tools/clang/tools/dxil2spv/lib/CMakeLists.txt
+++ b/tools/clang/tools/dxil2spv/lib/CMakeLists.txt
@@ -14,7 +14,7 @@ add_clang_library(dxil2spvlib
   dxil2spv.cpp
   )
 
-target_link_libraries(dxil2spvlib
+target_link_libraries(dxil2spvlib PRIVATE
   clangBasic
   clangCodeGen
   clangSPIRV
