[dxil2spv] Add FileCheck-style testing
Add FileCheck-style testing to dxil2spv, and a first static vertex
shader test case to test #4426. Also includes documentation for how to
add additional tests.

--- a/tools/clang/unittests/Dxil2Spv/CMakeLists.txt
+++ b/tools/clang/unittests/Dxil2Spv/CMakeLists.txt
@@ -1,20 +1,21 @@
 set(LLVM_LINK_COMPONENTS
-  Support
   dxcsupport
   dxil
   dxilrootsignature
   hlsl
+  Support
   )
 
 add_clang_unittest(clang-dxil2spv-tests
-  TestMain.cpp
-  LitTest.cpp
-  WholeFileTestFixture.cpp
-  WholeFileTestFixture.h
-  FileTestUtils.cpp
-  FileTestUtils.h
   Dxil2SpvTestOptions.cpp
   Dxil2SpvTestOptions.h
+  FileTestFixture.cpp
+  FileTestUtils.cpp
+  FileTestUtils.h
+  LitTest.cpp
+  TestMain.cpp
+  WholeFileTestFixture.cpp
+  WholeFileTestFixture.h
   )
 
 target_link_libraries(clang-dxil2spv-tests
