--- a/tools/clang/unittests/HLSLTestLib/CMakeLists.txt
+++ b/tools/clang/unittests/HLSLTestLib/CMakeLists.txt
@@ -1,5 +1,8 @@
 
 if(WIN32)
+set(HLSL_IGNORE_SOURCES
+  HLSLTestOptions.cpp
+)
 find_package(TAEF REQUIRED)
 include_directories(${TAEF_INCLUDE_DIRS})
 
@@ -19,9 +22,23 @@ add_clang_library(HLSLTestLib
   DxcTestUtils.cpp
   FileCheckerTest.cpp
   FileCheckForTest.cpp
+  HLSLTestOptions.cpp
 )
 include_directories(${LLVM_MAIN_SRC_DIR}/utils/unittest/googletest/include)
 include_directories(${LLVM_MAIN_SRC_DIR}/utils/unittest/googlemock/include)
+
+if(ENABLE_DXIL2SPV)
+include_directories(
+  ${LLVM_SOURCE_DIR}/tools/clang/tools
+  ${SPIRV_TOOLS_INCLUDE_DIR}
+  ${SPIRV_HEADER_INCLUDE_DIR}
+  )
+target_link_libraries(HLSLTestLib
+  clangSPIRV
+  dxcompiler
+  dxil2spvlib
+  )
+endif(ENABLE_DXIL2SPV)
 
 endif(WIN32)
 
