--- a/tools/clang/tools/CMakeLists.txt
+++ b/tools/clang/tools/CMakeLists.txt
@@ -32,7 +32,7 @@ add_subdirectory(dxil2spv)
 endif(ENABLE_DXIL2SPV)
 
 # These targets can currently only be built on Windows.
-if (WIN32)
+if(CMAKE_CXX_COMPILER_FRONTEND_VARIANT STREQUAL "MSVC")
 add_subdirectory(d3dcomp)
 add_subdirectory(dxrfallbackcompiler)
 add_subdirectory(dxa)
@@ -43,5 +43,5 @@ add_subdirectory(dxv)
 add_subdirectory(dxlib-sample)
 # UI powered by .NET.
 add_subdirectory(dotnetc)
-endif (WIN32)
+endif(CMAKE_CXX_COMPILER_FRONTEND_VARIANT STREQUAL "MSVC")
 # HLSL Change Ends
